SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")

FIND_PACKAGE(KDE4 REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(GSL REQUIRED)

INCLUDE_DIRECTORIES(include "../base/include" "../nodework/include" "../scene/include" ${KDE4_INCLUDES} ${QT_INCLUDE_DIR})

FILE(GLOB HEADERS "include/*.h")

QT_WRAP_CPP(cellule MOCS ${HEADERS})

FILE(GLOB SOURCES "src/*.cpp")

ADD_EXECUTABLE(cellule ${SOURCES} ${MOCS})

TARGET_LINK_LIBRARIES(cellule scene ${KDE4_KROSSUI_LIBS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${GSL_LIBRARIES})
