FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE_DIRECTORIES(include "../base/include" ${Boost_INCLUDE_DIRS} ${QT_INCLUDE_DIR})

LINK_DIRECTORIES(base ${Boost_LIBRARY_DIRS} ${QT_LIBRARY_DIR})

SET(LINK_DEPENDENCIES ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY})

FILE(GLOB HEADERS "include/*.h")

QT_WRAP_CPP(nodal MOCS ${HEADERS})

FILE(GLOB SOURCES "src/NW*.cpp")

ADD_LIBRARY(nodework STATIC ${SOURCES} ${MOCS})

TARGET_LINK_LIBRARIES(nodework base ${LINK_DEPENDENCIES})

ADD_EXECUTABLE(nodework ${SOURCES} ${MOCS} "src/main.cpp")

TARGET_LINK_LIBRARIES(nodework base ${LINK_DEPENDENCIES})
