SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(GSL REQUIRED)

INCLUDE_DIRECTORIES(include "../base/include" "../nodework/include" ${QT_INCLUDE_DIR} ${GSL_INCLUDE_DIR})

FILE(GLOB HEADERS "include/*.h")

QT_WRAP_CPP(cellule MOCS ${HEADERS})

FILE(GLOB SOURCES "src/*.cpp")

ADD_LIBRARY(scene STATIC ${SOURCES} ${MOCS})

TARGET_LINK_LIBRARIES(scene base nodework)
